data/diff_tests/wasmtime/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1971.wast
;; 2. **Test 2: Loop with Conditional Forward Branch to Imported Function**    - **Description**: Construct a loop that conditionally executes a branch (`br_if`) to an imported function. Ensure the transition, including the operand stack unwinding, is correctly maintained by both implementations while checking for differential behavior in operand stack handling.

(assert_invalid
  (module
    (import "env" "imported_func" (func))
    (func $loop_with_br_if
      (loop
        (br_if 0 (i32.const 1))
        (call 0)
      )
    )
  )
  "type mismatch"
)